# claude-multi-teams

./: .gitignore  CONTEXT.md  README.md
.claude-plugin/: marketplace.json
docs/adr/: 0001-python-runtime.md  README.md  (+8 more)
plugins/claude-multi-teams/skills/claude-multi-teams/: SKILL.md  pyproject.toml
plugins/claude-multi-teams/skills/claude-multi-teams/cmt/: __main__.py  agents.py  agy_screen.py  agy_warmup.py  callchain.py  codex_session.py  codex_warmup.py  extract.py  modal.py  mux.py  state.py  strategies.py
plugins/claude-multi-teams/skills/claude-multi-teams/cmt/ops/: ask.py  capture.py  dequeue.py  enqueue.py  keys.py  kill.py  last_reply.py  list_.py  modal.py  send.py  spawn.py  status.py  wait_output.py  wait_status.py  whoami.py
plugins/claude-multi-teams/skills/claude-multi-teams/cmt/workflow/: __init__.py  ask.py  inbox.py  kv.py  role.py  transcript.py
plugins/claude-multi-teams/skills/claude-multi-teams/tests/: conftest.py
plugins/claude-multi-teams/skills/claude-multi-teams/tests/smoke/: smoke_agy.sh  smoke_claude.sh  smoke_cmux.sh  smoke_codex.sh  smoke_phase2.sh
plugins/claude-multi-teams/skills/claude-multi-teams/tests/unit/: test_agy_screen.py  test_agy_spec.py  test_agy_warmup.py  test_ask_ensure_started.py  test_callchain.py  test_claude_session.py  test_cli.py  test_codex_extract.py  test_codex_session.py  test_codex_strategies.py  test_codex_warmup.py  test_extract.py  test_helpers.py  test_inbox.py  test_modal.py  test_mux.py  test_ops.py  test_ops_codex.py  test_ops_phase2.py  test_state.py  test_strategies.py  test_workflow.py
(+1 files in other folders)
